Added CSS and separate ids for the 2 suite symbols

--- a/src/style.css
+++ b/src/style.css
@@ -11,7 +11,38 @@ body {
 }
 
 .card {
+  margin: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  /* align-content: center; */
   background-color: white;
   height: 200px;
-  width: 90px;
+  width: 120px;
+  border-radius: 10px;
+  padding: 10px;
+}
+
+#card-value {
+  font-size: 60px;
+}
+
+.card-suite {
+  font-size: 30px;
+}
+
+#suite-top {
+  align-self: flex-start;
+}
+
+#suite-bottom {
+  align-self: flex-end;
+}
+
+.hearts {
+  color: red;
+}
+.diamonds {
+  color: red;
 }
